--- a/ruff.toml
+++ b/ruff.toml
@@ -15,16 +15,23 @@ docstring-code-format = true
 #          NPY: `numpy`, FLY: `flynt`, F: `pyflakes`, RUF: `ruff`
 #          From flake8: "ARG", "SLF", "S", "BLE", "B", "A", "C4", "ICN",
 #                       "PIE", "Q", "RSE", "SIM", "TID"
-select = ["D", "PL", "I", "E", "W", "NPY", "FLY", "F", "RUF",
+select = ["PL", "I", "E", "W", "NPY", "FLY", "F", "RUF",
           "ARG", "SLF", "S", "BLE","B", "A", "C4", "ICN", 
           "PIE", "Q", "RSE", "SIM", "TID"]
 
+# Enable D202 (Blank line after function) until we add "D" ruleset after exercise 3.
+extend-select = ["D202"]
+# After exercise 3 we will add "D" and extend to D417 on top for exercise 5
 # Enable D417 (Missing argument description) on top of the NumPy convention.
-extend-select = ["D417"]
+# extend-select = ["D417"]
 
 # Ignore SIM108 (use ternary instead of if-else) as it can arguably obscure intent.
 # Ignore RUF002 (ambiguous characters) as it does not allow apostrophes in strings.
-ignore = ["SIM108", "RUF002"]
+# Ignore PLR0913 (too many arguments) as it can be valid in scientific applications.
+# Temporarily Ignore PLR2004 (magic number comparison) for early exercises.
+# Temporarily Ignore E501 (line too long) for early exercises.
+ignore = ["SIM108", "RUF002", "PLR0913",
+          "PLR2004", "E501"]
 
 [lint.pydocstyle]
 # Use NumPy convention for checking docstrings
